--- a/information.html
+++ b/information.html
@@ -2,17 +2,13 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-
+    <title>數位電商基地</title>
     <link href="./assets/css/bootstrap-icons.min.css" rel="stylesheet">
     <link href="./assets/css/main.css" rel="stylesheet">
-    <!-- <link href="./assets/css/main.css" rel="stylesheet"> -->
-
-    <title>數位電商基地</title>
+    <script src='./assets/js/jquery-3.4.1.min.js'></script>
+    <script src="./assets/js/jquery.sidr.min.js"></script>
 </head>
 
 <body class="top_bg">
@@ -48,70 +44,70 @@
                                 <div class="infoListItem">
                                     <h5>奧地利商會及消保組織對電商Temu及希音的批評並建議奧國政府及歐盟當局採取應對措施</h5>
                                     <p>紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打</p>
-                                    <a href="" class="btn btn-primary">閱讀文章</a>
+                                    <a href="" class="btn btn-info">閱讀文章</a>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <div class="infoListItem">
                                     <h5>奧地利商會及消保組織對電商Temu及希音的批評並建議奧國政府及歐盟當局採取應對措施</h5>
                                     <p>紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打</p>
-                                    <a href="" class="btn btn-primary">閱讀文章</a>
+                                    <a href="" class="btn btn-info">閱讀文章</a>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <div class="infoListItem">
                                     <h5>奧地利商會及消保組織對電商Temu及希音的批評並建議奧國政府及歐盟當局採取應對措施</h5>
                                     <p>紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打</p>
-                                    <a href="" class="btn btn-primary">閱讀文章</a>
+                                    <a href="" class="btn btn-info">閱讀文章</a>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <div class="infoListItem">
                                     <h5>奧地利商會及消保組織對電商Temu及希音的批評並建議奧國政府及歐盟當局採取應對措施</h5>
                                     <p>紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打</p>
-                                    <a href="" class="btn btn-primary">閱讀文章</a>
+                                    <a href="" class="btn btn-info">閱讀文章</a>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <div class="infoListItem">
                                     <h5>奧地利商會及消保組織對電商Temu及希音的批評並建議奧國政府及歐盟當局採取應對措施</h5>
                                     <p>紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打</p>
-                                    <a href="" class="btn btn-primary">閱讀文章</a>
+                                    <a href="" class="btn btn-info">閱讀文章</a>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <div class="infoListItem">
                                     <h5>奧地利商會及消保組織對電商Temu及希音的批評並建議奧國政府及歐盟當局採取應對措施</h5>
                                     <p>紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打</p>
-                                    <a href="" class="btn btn-primary">閱讀文章</a>
+                                    <a href="" class="btn btn-info">閱讀文章</a>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <div class="infoListItem">
                                     <h5>奧地利商會及消保組織對電商Temu及希音的批評並建議奧國政府及歐盟當局採取應對措施</h5>
                                     <p>紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打</p>
-                                    <a href="" class="btn btn-primary">閱讀文章</a>
+                                    <a href="" class="btn btn-info">閱讀文章</a>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <div class="infoListItem">
                                     <h5>奧地利商會及消保組織對電商Temu及希音的批評並建議奧國政府及歐盟當局採取應對措施</h5>
                                     <p>紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打</p>
-                                    <a href="" class="btn btn-primary">閱讀文章</a>
+                                    <a href="" class="btn btn-info">閱讀文章</a>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <div class="infoListItem">
                                     <h5>奧地利商會及消保組織對電商Temu及希音的批評並建議奧國政府及歐盟當局採取應對措施</h5>
                                     <p>紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打</p>
-                                    <a href="" class="btn btn-primary">閱讀文章</a>
+                                    <a href="" class="btn btn-info">閱讀文章</a>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6">
                                 <div class="infoListItem">
                                     <h5>奧地利商會及消保組織對電商Temu及希音的批評並建議奧國政府及歐盟當局採取應對措施</h5>
                                     <p>紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打紐西蘭證券交易所上市公司公布最新的企業財報季已接近尾聲，公開發布的版本包含豐富的資訊來源。39 家公司財報的公開發布和投資者說明會資料顯示，絕大多數評論中的氛圍表面上都是負面的，各公司都提前描述了近期充滿挑戰的經濟狀況。事實上，在分析的39 家公司中，有12 家使用了「挑戰」這個詞彙。 建築業、零售業和初級產業似乎受到的打</p>
-                                    <a href="" class="btn btn-primary">閱讀文章</a>
+                                    <a href="" class="btn btn-info">閱讀文章</a>
                                 </div>
                             </div>
                         </div>
@@ -141,7 +137,6 @@
     </div>
 
     <footer></footer>
-    <script src='./assets/js/jquery-3.4.1.min.js'></script>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script>
         $('.navTitle').on('click',function(){
