--- a/news.html
+++ b/news.html
@@ -2,17 +2,13 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-
+    <title>數位電商基地</title>
     <link href="./assets/css/bootstrap-icons.min.css" rel="stylesheet">
     <link href="./assets/css/main.css" rel="stylesheet">
-    <!-- <link href="./assets/css/main.css" rel="stylesheet"> -->
-
-    <title>數位電商基地</title>
+    <script src='./assets/js/jquery-3.4.1.min.js'></script>
+    <script src="./assets/js/jquery.sidr.min.js"></script>
 </head>
 
 <body class="top_bg">
@@ -176,7 +172,6 @@
     </div>
 
     <footer></footer>
-    <script src='./assets/js/jquery-3.4.1.min.js'></script>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script>
         $('.navTitle').on('click',function(){
