調整a標籤樣式＆News相關頁面JS

--- a/news.html
+++ b/news.html
@@ -53,24 +53,24 @@
                                         <li><a href="news_new.html"><span>最新文章</span></a></li>
                                         <li><a href="news_all.html"><span>分類文章</span></a>
                                         <ul>
-                                            <li><span>・跨境電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
-                                            <li><span>・東南亞電商</span></li>
+                                            <li><a href="#">・跨境電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
+                                            <li><a href="#">・東南亞電商</a></li>
                                         </ul>
                                         </li>
                                     </ul>
@@ -175,7 +175,7 @@
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script>
         $('.navTitle').on('click',function(){
-            $(this).siblings('ul').toggle(300);
+            $(this).siblings('ul').slideToggle(300);
         })
         $("header").load("./layout/header.html");
         $("footer").load("./layout/footer.html");
