--- a/news_all.html
+++ b/news_all.html
@@ -272,7 +272,7 @@
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script>
         $('.navTitle').on('click',function(){
-            $(this).siblings('ul').toggle(300);
+            $(this).siblings('ul').slideToggle(300);
         })
         $("header").load("./layout/header.html");
         $("footer").load("./layout/footer.html");
