--- a/news_new.html
+++ b/news_new.html
@@ -171,7 +171,7 @@
     <script>
 
         $('.navTitle').on('click',function(){
-            $(this).siblings('ul').toggle(300);
+            $(this).siblings('ul').slideToggle(300);
         })
         $("header").load("./layout/header.html");
         $("footer").load("./layout/footer.html");
