調整：推薦文章＆檔案下載<a>

--- a/download.html
+++ b/download.html
@@ -145,7 +145,9 @@
                                         <p>eBay X Taiwantrade_Sporting Goods Report_下載版.pdf</p>
                                     </div>
                                     <div>
-                                        <i class="bi bi-cloud-arrow-down"></i>
+                                        <a href="111.pdf" download="111.pdf">
+                                            <i class="bi bi-cloud-arrow-down"></i>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -156,7 +158,9 @@
                                         <p>eBay X Taiwantrade_Sporting Goods Report_下載版.pdf</p>
                                     </div>
                                     <div>
-                                        <i class="bi bi-cloud-arrow-down"></i>
+                                        <a href="111.pdf" download="111.pdf">
+                                            <i class="bi bi-cloud-arrow-down"></i>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -167,7 +171,9 @@
                                         <p>eBay X Taiwantrade_Sporting Goods Report_下載版.pdf</p>
                                     </div>
                                     <div>
-                                        <i class="bi bi-cloud-arrow-down"></i>
+                                        <a href="111.pdf" download="111.pdf">
+                                            <i class="bi bi-cloud-arrow-down"></i>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -178,7 +184,9 @@
                                         <p>eBay X Taiwantrade_Sporting Goods Report_下載版.pdf</p>
                                     </div>
                                     <div>
-                                        <i class="bi bi-cloud-arrow-down"></i>
+                                        <a href="111.pdf" download="111.pdf">
+                                            <i class="bi bi-cloud-arrow-down"></i>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -189,7 +197,9 @@
                                         <p>eBay X Taiwantrade_Sporting Goods Report_下載版.pdf</p>
                                     </div>
                                     <div>
-                                        <i class="bi bi-cloud-arrow-down"></i>
+                                        <a href="111.pdf" download="111.pdf">
+                                            <i class="bi bi-cloud-arrow-down"></i>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -200,7 +210,9 @@
                                         <p>eBay X Taiwantrade_Sporting Goods Report_下載版.pdf</p>
                                     </div>
                                     <div>
-                                        <i class="bi bi-cloud-arrow-down"></i>
+                                        <a href="111.pdf" download="111.pdf">
+                                            <i class="bi bi-cloud-arrow-down"></i>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -225,10 +237,6 @@
         </div>
 
     </div>
-
-
-    </div>
-
     <footer></footer>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <script>
