--- a/news_article.html
+++ b/news_article.html
@@ -91,108 +91,69 @@
                                 <div class="otherArticle">
                                     <div class="">
                                         <h4>推薦文章</h4>
-                                        <div class="row p-4">
-                                            <div class="col-12 col-md-6 col-lg-4">
-                                                <figure class="card card_vv">
-                                                    <div class="card_img">
-                                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
-                                                            alt="">
+                                        <div class="otherList list_hh">
+                                            <!-- list op -->
+                                             <a href="news_article.html">
+                                                 <figure>
+                                                    <div class="pic">
+                                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg" alt="">
                                                     </div>
-                                                    <div class="card-body">
-                                                        <h5 class="card-title">Card title Card title Card titleCard
-                                                            titleCard titleCard titleCard title</h5>
-                                                        <p class="card-text">Some quick example text to build on the
-                                                            card title and make up the bulk of the Some quick example
-                                                            text to build on the card title and make up the bulk of
-                                                            theSome quick example text to build on the card title and
-                                                            make up the bulk of theSome quick example text to build on
-                                                            the card title and make up the bulk of the
-                                                            card's content.</p>
-                                                        <a href="news_article.html" class="btn">閱讀文章</a>
-                                                    </div>
+                                                    <figcaption class="text">
+                                                        <h5>台灣經貿網前進德國科隆五金展 為我商搶攻全球商機</h5>
+                                                        <p>2024年德國科隆五金展(Eisenwarenmesse–International Hardware Fair 2024)於3月3日至6日在科隆國際展覽中心(Koelnmesse Exhibition Center)盛大登場。面對後疫情時代的採購需求，協助我商搶攻疫後復甦商機，由經濟部國際貿易署指導、外貿協會建置之台灣經貿網偕同34家優質尊爵會員產品及型錄前往展出，向全球展現臺灣五金與手工具創新及製造實力。
+                                                        </p>
+                                                    </figcaption>
                                                 </figure>
-                                            </div>
-                                            <div class="col-12 col-md-6 col-lg-4">
-                                                <figure class="card card_vv">
-                                                    <div class="card_img">
-                                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
-                                                            alt="">
-                                                    </div>
-                                                    <div class="card-body">
-                                                        <h5 class="card-title">Card title Card title Card titleCard
-                                                            titleCard titleCard titleCard title</h5>
-                                                        <p class="card-text">Some quick example text to build on the
-                                                            card title and make up the bulk of the Some quick example
-                                                            text to build on the card title and make up the bulk of
-                                                            theSome quick example text to build on the card title and
-                                                            make up the bulk of theSome quick example text to build on
-                                                            the card title and make up the bulk of the
-                                                            card's content.</p>
-                                                        <a href="news_article.html" class="btn">閱讀文章</a>
-                                                    </div>
-                                                </figure>
-                                            </div>
-                                            <div class="col-12 col-md-6 col-lg-4">
-                                                <figure class="card card_vv">
-                                                    <div class="card_img">
-                                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
-                                                            alt="">
-                                                    </div>
-                                                    <div class="card-body">
-                                                        <h5 class="card-title">Card title Card title Card titleCard
-                                                            titleCard titleCard titleCard title</h5>
-                                                        <p class="card-text">Some quick example text to build on the
-                                                            card title and make up the bulk of the Some quick example
-                                                            text to build on the card title and make up the bulk of
-                                                            theSome quick example text to build on the card title and
-                                                            make up the bulk of theSome quick example text to build on
-                                                            the card title and make up the bulk of the
-                                                            card's content.</p>
-                                                        <a href="news_article.html" class="btn">閱讀文章</a>
-                                                    </div>
-                                                </figure>
-                                            </div>
-                                            <div class="col-12 col-md-6 col-lg-4">
-                                                <figure class="card card_vv">
-                                                    <div class="card_img">
-                                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
-                                                            alt="">
-                                                    </div>
-                                                    <div class="card-body">
-                                                        <h5 class="card-title">Card title Card title Card titleCard
-                                                            titleCard titleCard titleCard title</h5>
-                                                        <p class="card-text">Some quick example text to build on the
-                                                            card title and make up the bulk of the Some quick example
-                                                            text to build on the card title and make up the bulk of
-                                                            theSome quick example text to build on the card title and
-                                                            make up the bulk of theSome quick example text to build on
-                                                            the card title and make up the bulk of the
-                                                            card's content.</p>
-                                                        <a href="news_article.html" class="btn">閱讀文章</a>
-                                                    </div>
-                                                </figure>
-                                            </div>
-                                            <div class="col-12 col-md-6 col-lg-4">
-                                                <figure class="card card_vv">
-                                                    <div class="card_img">
-                                                        <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg"
-                                                            alt="">
-                                                    </div>
-                                                    <div class="card-body">
-                                                        <h5 class="card-title">Card title Card title Card titleCard
-                                                            titleCard titleCard titleCard title</h5>
-                                                        <p class="card-text">Some quick example text to build on the
-                                                            card title and make up the bulk of the Some quick example
-                                                            text to build on the card title and make up the bulk of
-                                                            theSome quick example text to build on the card title and
-                                                            make up the bulk of theSome quick example text to build on
-                                                            the card title and make up the bulk of the
-                                                            card's content.</p>
-                                                        <a href="news_article.html" class="btn">閱讀文章</a>
-                                                    </div>
-                                                </figure>
-                                            </div>
-
+                                            </a>
+                                            <!-- list ed -->
+                                            <a href="news_article.html">
+                                                <figure>
+                                                   <div class="pic">
+                                                       <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg" alt="">
+                                                   </div>
+                                                   <figcaption class="text">
+                                                       <h5>台灣經貿網前進德國科隆五金展 為我商搶攻全球商機</h5>
+                                                       <p>2024年德國科隆五金展(Eisenwarenmesse–International Hardware Fair 2024)於3月3日至6日在科隆國際展覽中心(Koelnmesse Exhibition Center)盛大登場。面對後疫情時代的採購需求，協助我商搶攻疫後復甦商機，由經濟部國際貿易署指導、外貿協會建置之台灣經貿網偕同34家優質尊爵會員產品及型錄前往展出，向全球展現臺灣五金與手工具創新及製造實力。
+                                                       </p>
+                                                   </figcaption>
+                                               </figure>
+                                           </a>
+                                           <a href="news_article.html">
+                                               <figure>
+                                                  <div class="pic">
+                                                      <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg" alt="">
+                                                  </div>
+                                                  <figcaption class="text">
+                                                      <h5>台灣經貿網前進德國科隆五金展 為我商搶攻全球商機</h5>
+                                                      <p>2024年德國科隆五金展(Eisenwarenmesse–International Hardware Fair 2024)於3月3日至6日在科隆國際展覽中心(Koelnmesse Exhibition Center)盛大登場。面對後疫情時代的採購需求，協助我商搶攻疫後復甦商機，由經濟部國際貿易署指導、外貿協會建置之台灣經貿網偕同34家優質尊爵會員產品及型錄前往展出，向全球展現臺灣五金與手工具創新及製造實力。
+                                                      </p>
+                                                  </figcaption>
+                                              </figure>
+                                          </a>
+                                          <a href="news_article.html">
+                                              <figure>
+                                                 <div class="pic">
+                                                     <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg" alt="">
+                                                 </div>
+                                                 <figcaption class="text">
+                                                     <h5>台灣經貿網前進德國科隆五金展 為我商搶攻全球商機</h5>
+                                                     <p>2024年德國科隆五金展(Eisenwarenmesse–International Hardware Fair 2024)於3月3日至6日在科隆國際展覽中心(Koelnmesse Exhibition Center)盛大登場。面對後疫情時代的採購需求，協助我商搶攻疫後復甦商機，由經濟部國際貿易署指導、外貿協會建置之台灣經貿網偕同34家優質尊爵會員產品及型錄前往展出，向全球展現臺灣五金與手工具創新及製造實力。
+                                                     </p>
+                                                 </figcaption>
+                                             </figure>
+                                         </a>
+                                         <a href="news_article.html">
+                                             <figure>
+                                                <div class="pic">
+                                                    <img src="https://gd.taiwantrade.com/uploads/img/redactor/20240809/66b58cd87a494.jpg" alt="">
+                                                </div>
+                                                <figcaption class="text">
+                                                    <h5>台灣經貿網前進德國科隆五金展 為我商搶攻全球商機</h5>
+                                                    <p>2024年德國科隆五金展(Eisenwarenmesse–International Hardware Fair 2024)於3月3日至6日在科隆國際展覽中心(Koelnmesse Exhibition Center)盛大登場。面對後疫情時代的採購需求，協助我商搶攻疫後復甦商機，由經濟部國際貿易署指導、外貿協會建置之台灣經貿網偕同34家優質尊爵會員產品及型錄前往展出，向全球展現臺灣五金與手工具創新及製造實力。
+                                                    </p>
+                                                </figcaption>
+                                            </figure>
+                                        </a>
                                         </div>
                                     </div>
                                 </div>
