--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
     <header>
     </header>
     <div class="wrapper indexWrap">
-        <section>
+        <section class="indexVideo">
+            <!-- controls autoplay loop muted -->
+            <video width="100%" autoplay loop muted poster="./assets/img/mv.jpg">
+                <source src="./assets/img/mv.mp4" type="video/mp4">
+                您的瀏覽器不支援此影片格式。
+              </video>
+        </section>
+        <section class="indexBanner">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
